Fixed an issue with the overlay on mobile

--- a/theme/demos/wireframe/components/teaser/teaser--overlay.css
+++ b/theme/demos/wireframe/components/teaser/teaser--overlay.css
@@ -9,6 +9,14 @@
     grid-area: overlay;
   }
 
+  .cmp-image {
+    @apply h-full;
+
+    .cmp-image__image {
+      @apply object-cover h-full;
+    }
+  }
+
   .cmp-teaser__content {
     @apply p-10 text-center justify-center text-white gap-y-6;
 
